# land_robot

./: .gitignore  README.md  stack.xml
arduino_node/: pwm.ino
auv_imu_driver/: CMakeLists.txt  README  manifest.xml  package.xml
auv_imu_driver/include/auv_imu_driver/vn100/: imu.h  vn100.h
auv_imu_driver/launch/: remote_imu.launch  system_imu.launch
auv_imu_driver/src/quaternion_to_rpy/: main.cpp
auv_imu_driver/src/vn100/: imu.cpp  main.cpp  vn100.cpp
auv_msgs/: CMakeLists.txt  CMakeLists.txt.bak  package.xml
auv_msgs/action/: ExecutionState.action  ScanState.action  TransitionState.action
auv_msgs/msg/: Belief.msg  BuoyDetails.msg  FramePoint.msg  GateDetails.msg  HydStatus.msg  Map.msg  MapPoint.msg  MarkerDetails.msg  McbData.msg  OctagonDetails.msg  Orientation.msg  PWMValues.msg  ParkingTask.msg  Path.msg  PlankDetails.msg  Pneumatic.msg  Pose.msg  PressureSensor.msg  PwbStatus.msg  SetPoint.msg  TaskState.msg  TorpedoDetails.msg  Velocity.msg
auv_msgs/src/: .gitignore
auv_msgs/srv/: HueColors.srv  IMUFilter.srv  SimInterrupt.srv  dropMarker.srv  setBelief.srv  shootTorpedo.srv
my_debug/: CMakeLists.txt  package.xml
my_debug/include/my_debug/: QDRuler.h  input.h  main_window.h  mouse.h  point.h
my_debug/src/: Makefile  QDRuler.cpp  main.cpp  main_window.cpp  mouse.cpp  my_input.cpp  point.cpp
navigation/robot_pose_ekf/src/: odom_estimation_node.cpp
navigation/syn/: CMakeLists.txt  a.txt  imu.cpp.backup  imu.cpp.backup1  package.xml  vo.cpp.backup  vo.cpp.backup1
navigation/syn/launch/: tc1.launch  tc2.launch  tc3.launch  tc4.launch  tc5.launch  tc6.launch  test.launch  usb_cam_test.launch  usb_cam_test1.launch  usb_cam_test2.launch
navigation/syn/src/: imu.cpp  quaternion_to_rpy.cpp  vo.cpp
navigation/syn/test/: a.out  grand.cpp  odom_fmt  odom_test_data  q2u.cpp
navigation/syn/unit_tests/: Testcases.odt  tc1_imu.cpp  tc1_vo.cpp  tc2_imu.cpp  tc2_vo.cpp  tc3_vo.cpp  tc4_imu.cpp  tc4_vo.cpp  tc5_imu.cpp  tc6_imu.cpp  tc6_vo.cpp
pwm_publisher/: CMakeLists.txt  package.xml
pwm_publisher/include/: setup.h
pwm_publisher/src/: pwmpub.cpp  rpwm.cpp
test_vision/: CMakeLists.txt  package.xml
test_vision/include/: mono_odometry.h  mono_odometry.h.bak
test_vision/launch/: uvc_camera.launch
test_vision/src/: mono_odometry.cpp  mono_odometry.cpp.bak  test_MonoVisualOdometry.cpp
veerbhadra_description/: CMakeLists.txt  package.xml
veerbhadra_description/urdf/: veerbhadra.urdf  veerbhadra.xacro
veerbhadra_gazebo/: CMakeLists.txt  package.xml
veerbhadra_gazebo/launch/: arena.launch  empty_world.launch  vehicle.launch  vehicle_buoy.launch
veerbhadra_gazebo/models/: bin.model  gate.model  green_buoy.model  inverted_gate.model  plank.model  red_buoy.model  sample.urdf  sample.xacro  window.dae  window.model  yellow_buoy.model
veerbhadra_gazebo/worlds/: empty.world
