<?xml version="1.0"?>
<package>
  <name>veerbhadra_gazebo</name>
  <version>0.5.0</version>
  <description>The veerbhadra_gazebo package</description>

  <maintainer email="savant@todo.todo">savant</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>

</package>
